temporarily fixed issue with image being cropped in featured project card component

--- a/src/app/components/shared/featured-project-card/featured-project-card.component.scss
+++ b/src/app/components/shared/featured-project-card/featured-project-card.component.scss
@@ -6,9 +6,11 @@
 }
 
 .featured-project-card-image-portion {
+    aspect-ratio: 1 / 1;
     min-height: 350px;
-    width: 100%;
     border-radius: 10px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .featured-project-card-content-portion {
